@@ -14,14 +14,14 @@ Setup:
 If you already have a CPAN enabled perl installed then type "cpan Dwimmer" in your command prompt.
 If you don't have perl yet then we have a binary packaged version for windows. Install Dwimperl.
 
-dwimmer_setup.pl --password ADMIN_PASSWORD --email email-of-admin@company.com --root path/to/your/installation
+dwimmer_admin.pl --setup --password ADMIN_PASSWORD --email email-of-admin@company.com --root path/to/your/installation
 
 ------------
 Upgrade:
 
 cpan Dwimmer
 
-dwimmer_setup.pl --password ADMIN_PASSWORD --root path/to/your/installation --upgrade
+dwimmer_admin.pl --upgrade --password ADMIN_PASSWORD --root path/to/your/installation
 
 
 
