@@ -13,8 +13,8 @@ use File::Path qw(mkpath);
 use File::Spec;
 use File::ShareDir;
 use Getopt::Long qw(GetOptions);
-use String::Random;
 use Pod::Usage  qw(pod2usage);
+use String::Random;
 
 use Dwimmer::Tools qw(sha1_base64 save_page _get_db);
 
@@ -26,22 +26,36 @@ GetOptions(\%opt,
     'dbonly',
     'silent',
     'share=s',
+
+    'setup',
     'upgrade',
-    'resetpw',
+
     'username=s',
 
+    'resetpw',
     'listusers',
     'showuser',
-
     'verify=s',
 );
 usage() if not $opt{root};
 
+if ($opt{setup}) {
+    if (-e $opt{root} and not $opt{dbonly}) {
+        die "Root directory ($opt{root}) already exists"
+    }
 
-if ($opt{resetpw}) {
+    usage() if not $opt{email};
+    die 'Invalid e-mail' if not Email::Valid->address($opt{email});
+    usage() if not $opt{password};
+    die 'Password needs to be at least 6 characters' if length $opt{password} < 6;
+} else {
     if (not -e $opt{root}) {
         die "Root directory ($opt{root}) does NOT exist.";
     }
+}
+
+
+if ($opt{resetpw}) {
     if (not $opt{password}) {
         die "Need password to set it";
     }
@@ -80,10 +94,6 @@ if (defined $opt{verify}) {
 }
 
 if ($opt{listusers}) {
-    if (not -e $opt{root}) {
-        die "Root directory ($opt{root}) does NOT exist.";
-    }
-
     $ENV{DWIMMER_ROOT} = $opt{root};
     my $db = _get_db();
     my @users = $db->resultset('User')->all();
@@ -96,9 +106,6 @@ if ($opt{listusers}) {
 }
 
 if ($opt{showuser}) {
-    if (not -e $opt{root}) {
-        die "Root directory ($opt{root}) does NOT exist.";
-    }
     if (not $opt{username}) {
         die "Need username to ";
     }
@@ -114,25 +121,17 @@ if ($opt{showuser}) {
     exit;
 }
 
-if (-e $opt{root} and not $opt{dbonly} and not $opt{upgrade}) {
-    die "Root directory ($opt{root}) already exists"
+
+if (not $opt{upgrade} and not $opt{setup}) {
+    usage();
 }
 
-if ($opt{upgrade} and not -e $opt{root}) {
-    die "Root directory ($opt{root}) does NOT exist."
-}
 
-if (not $opt{upgrade}) {
-    usage() if not $opt{email};
-    die 'Invalid e-mail' if not Email::Valid->address($opt{email});
-    usage() if not $opt{password};
-    die 'Password needs to be 6 characters' if length $opt{password} < 6;
-}
 
-my $dist_dir;
 
 # When we are in the development environment (have .git) set this to the root directory
 # When we are in the installation environment (have Makefile.PL) set this to the share/ subdirectory
+my $dist_dir;
 if (-e File::Spec->catdir(dirname(dirname abs_path($0)) , '.git') ) {
     $dist_dir = dirname(dirname abs_path($0))
 } elsif (-e File::Spec->catdir(dirname(dirname abs_path($0)) , 'Makefile.PL') ) {
@@ -195,6 +194,7 @@ upgrades($dbfile);
 say 'You can now launch the application and visit the web site';
 
 exit;
+##################################################################
 
 sub setup_db {
     my $dbfile = shift;
@@ -254,43 +254,51 @@ sub usage {
 
 =head1 SYNOPSIS
 
+=head2 Required parameter:
 
-To setup a new instance:
+   --root    PATH/TO/ROOT    path to the root of the installation
 
+=head2 To setup a new instance:
+
+   --setup
    --email email        of administrator
    --password PASSWORD  of administrator
-   --root ROOT          path to the root of the installation
 
 Optional parameters:
 
    --dbonly             Create only the database (for development)
    --silent             no success report (for testing)
 
-
-To upgrade run:
+=head2 To upgrade run:
 
    --upgrade
-   --root    PATH/TO/ROOT
 
 
-To reset password give the following flags:
+=head2 Admin tools:
+
+=over 4
+
+=item * List users:
+
+   --listusers
+
+=item * Show details of a user:
+
+   --showuser
+   --username USERNAME    
+   
+=item * Set or remove verified bit of a user:
+
+   --verify [0|1]
+   --username USERNAME
+
+=item * Set the password of a specific user:
 
    --resetpw
-   --root     PATH/TO/ROOT
    --username USERNAME
    --password PASSWORD
 
-Show details of a user:
-
-   --showuser
-   --root     PATH/TO/ROOT
-   --username USERNAME
-   
-   --listusers
-   --root
-   
-   --verify
-   --root
+=back
 
 =cut
 
